--- a/app/src/main/res/layout-h480dp/qo_1.xml
+++ b/app/src/main/res/layout-h480dp/qo_1.xml
@@ -345,7 +345,7 @@
                         android:id="@+id/answer_desc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Maybe its"
+                        android:text="@string/maybe_its"
                         android:textSize="16sp"
                         android:textColor="@color/white"
                         android:layout_centerInParent="true"
@@ -530,7 +530,7 @@
                     android:layout_weight="1"
                     android:textAlignment="center"
                     android:layout_height="wrap_content"
-                    android:text="Minus 2 Questions"
+                    android:text="@string/minus_2_questions"
                     android:textSize="8dp"
                     android:id="@+id/opt_dec_1"
                     android:textColor="@color/white"
@@ -546,7 +546,7 @@
                     android:id="@+id/opt_dec_2"
                     android:textColor="@color/white"
 
-                    android:text="Ask Computer"/>
+                    android:text="@string/ask_computer"/>
                 <TextView
                     android:textSize="8dp"
                     android:layout_width="0dp"
@@ -556,7 +556,7 @@
                     android:id="@+id/opt_dec_3"
                     android:textColor="@color/white"
 
-                    android:text="Take a Poll"/>
+                    android:text="@string/take_a_poll"/>
                 <TextView
                     android:textSize="8dp"
                     android:layout_width="0dp"
@@ -566,7 +566,7 @@
                     android:id="@+id/opt_dec_4"
                     android:textColor="@color/white"
 
-                    android:text="Reset Question"/>
+                    android:text="@string/reset_question"/>
 
             </LinearLayout>
         </LinearLayout>
