--- a/app/src/main/res/layout-h720dp/qo_1.xml
+++ b/app/src/main/res/layout-h720dp/qo_1.xml
@@ -347,7 +347,7 @@
                         android:id="@+id/answer_desc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Maybe its"
+                        android:text="@string/maybe_its"
                         android:textSize="16sp"
                         android:textColor="@color/white"
                         android:layout_centerInParent="true"
@@ -545,7 +545,7 @@
                         android:layout_weight="1"
                         android:textAlignment="center"
                         android:layout_height="wrap_content"
-                        android:text="Minus 2 Questions"
+                        android:text="@string/minus_2_questions"
                         android:textSize="10dp"
                         android:id="@+id/opt_dec_1"
                         android:textColor="@color/white"
@@ -557,8 +557,7 @@
                         android:layout_weight="1"
                         android:textAlignment="center"
                         android:layout_height="wrap_content"
-
-                        android:text="Ask Computer"
+                        android:text="@string/ask_computer"
                         android:textSize="10dp"
                         android:id="@+id/opt_dec_2"
                         android:textColor="@color/white"
@@ -569,7 +568,7 @@
                         android:textAlignment="center"
                         android:layout_height="wrap_content"
 
-                        android:text="Take a Poll"
+                        android:text="@string/take_a_poll"
                         android:textSize="10dp"
                         android:id="@+id/opt_dec_3"
                         android:textColor="@color/white"
@@ -581,7 +580,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/opt_dec_4"
 
-                        android:text="Reset Question"
+                        android:text="@string/reset_question"
                         android:textSize="10dp"
                         android:textColor="@color/white"
                         />
