--- a/app/src/main/res/layout-h300dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h300dp/activity_dashboard.xml
@@ -293,7 +293,6 @@
                 android:layout_marginLeft="10dp"
                 />
             <TextView
-                android:id="@+id/leaderboard_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/leaderboard"
@@ -317,11 +316,12 @@
                     >
 
                     <TextView
+                        android:id="@+id/leaderboard_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/leaderboard"
                         android:textStyle="bold"
-                        android:textSize="20dp"
+                        android:textSize="20sp"
                         android:layout_marginLeft="40dp"
                         android:textColor="@color/black"
                         />
@@ -357,6 +357,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/more_games"
+                android:textAlignment="center"
                 android:textStyle="bold"
                 android:textSize="20dp"
                 android:layout_centerInParent="true"
@@ -384,6 +385,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/goto_youtube"
+                android:textAlignment="center"
                 android:textStyle="bold"
                 android:textSize="20dp"
                 android:layout_centerInParent="true"
