--- a/app/src/main/res/layout-h720dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h720dp/activity_dashboard.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/rootview"
     tools:context=".Dashboard">
 
 
@@ -22,34 +21,34 @@
             android:layout_height="0dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
-            android:gravity="center"
             android:layout_weight="1"
-            >
+            android:gravity="center">
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_centerVertical="true"
-                >
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
                 <RelativeLayout
                     android:id="@+id/profile"
-                    android:elevation="1dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:elevation="1dp"
 
                     >
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/hexagon"
-                    android:rotation="90"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="-5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    app:tint="@color/basic_color"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="-5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:rotation="90"
+                        android:src="@drawable/hexagon"
+                        app:tint="@color/basic_color" />
 
                     <ImageView
                         android:layout_width="32dp"
@@ -58,7 +57,7 @@
                         android:layout_marginLeft="15dp"
 
                         android:src="@drawable/ic_baseline_person_outline_24" />
-            </RelativeLayout>
+                </RelativeLayout>
 
 
             </RelativeLayout>
@@ -67,9 +66,9 @@
 
                 android:id="@+id/account"
                 android:layout_width="160dp"
-                android:layout_centerHorizontal="true"
-
                 android:layout_height="35dp"
+
+                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
 
                 android:background="@drawable/ic_hexnow"
@@ -107,12 +106,13 @@
                     android:rotation="90"
                     android:src="@drawable/hexagon"
                     app:tint="@color/basic_color" />
+
                 <ImageView
                     android:id="@+id/settings"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/ic_baseline_settings_24"/>
+                    android:src="@drawable/ic_baseline_settings_24" />
             </RelativeLayout>
         </RelativeLayout>
 
@@ -121,8 +121,7 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="-40dp"
-            android:layout_weight="2"
-            >
+            android:layout_weight="2">
 
             <ImageView
                 android:id="@+id/rays"
@@ -141,24 +140,24 @@
                 android:background="@drawable/game_logo"
                 android:scaleType="centerCrop" />
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="-20dp"
-            android:layout_weight="1.2"
-            >
+            android:layout_marginRight="20dp"
+            android:layout_weight="1.2">
+
             <RelativeLayout
+                android:id="@+id/btn_forAnim"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_forAnim"
-                android:layout_marginTop="35dp"
-                android:layout_marginBottom="35dp"
                 android:layout_marginLeft="30dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginRight="30dp"
-                android:background="@drawable/playbtn_bg"
-                >
+                android:layout_marginBottom="35dp"
+                android:background="@drawable/playbtn_bg">
 
             </RelativeLayout>
 
@@ -248,42 +247,39 @@
                 </LinearLayout>
             </RelativeLayout>
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            >
+            android:layout_marginRight="25dp">
 
-        <RelativeLayout
-            android:id="@+id/leaderboard"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:background="@drawable/ic_hexnow"
-            >
+            <RelativeLayout
+                android:id="@+id/leaderboard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/ic_hexnow"
+                android:padding="10dp">
 
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_leaderboard_black_48dp"
-                app:tint="@color/white"
-                android:alpha="0.8"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                />
-            <TextView
-                android:id="@+id/leaderboard_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/leaderboard"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:layout_centerInParent="true"
-                android:textColor="@color/white"
-                />
-        </RelativeLayout>
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:alpha="0.8"
+                    android:src="@drawable/ic_leaderboard_black_48dp"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/leaderboard"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -298,19 +294,21 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/leaderboard_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
                         android:text="@string/leaderboard"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_marginStart="40dp"
                         android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        />
 
                     <TextView
                         android:id="@+id/see_rank_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
+                        android:layout_marginStart="40dp"
                         android:text="@string/see_your_ranking"
                         android:textColor="@color/basic_color"
                         android:textSize="14sp" />
@@ -318,16 +316,16 @@
             </RelativeLayout>
 
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/more_games"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@drawable/ic_hexnow"
             android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
-            android:padding="10dp"
-            >
+            android:layout_marginRight="25dp"
+            android:background="@drawable/ic_hexnow"
+            android:padding="10dp">
 
 
             <TextView
@@ -336,22 +334,23 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/more_games"
+                android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
 
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/goto_youtube"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@drawable/ic_hexnow"
             android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
-            android:padding="10dp"
-            >
+            android:layout_marginRight="25dp"
+            android:background="@drawable/ic_hexnow"
+            android:padding="10dp">
 
 
             <TextView
@@ -360,44 +359,41 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/goto_youtube"
+                android:textAlignment="center"
                 android:textColor="@color/white"
-
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
 
         </RelativeLayout>
+
         <RelativeLayout
-            android:visibility="gone"
-
-
-
             android:id="@+id/new_particle"
+
+
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@drawable/ic_hexnow"
             android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/ic_hexnow"
             android:padding="10dp"
-            >
-
+            android:visibility="gone">
 
 
             <TextView
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="new Particl"
-                android:textStyle="bold"
-                android:textSize="20dp"
                 android:layout_centerInParent="true"
+                android:text="new Particl"
                 android:textColor="@color/white"
-                />
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
 
         </RelativeLayout>
-        </LinearLayout>
+    </LinearLayout>
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
@@ -405,6 +401,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_adunit"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_adunit"/>
 
 </RelativeLayout>
