--- a/app/src/main/res/layout/single_history.xml
+++ b/app/src/main/res/layout/single_history.xml
@@ -2,21 +2,21 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/rootview"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <LinearLayout
+        android:id="@+id/high_score_layout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginHorizontal="20dp"
 
-        android:id="@+id/high_score_layout"
-        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
         android:gravity="center_vertical"
-        android:layout_centerInParent="true"
-        >
+        android:orientation="vertical">
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -24,50 +24,50 @@
             android:layout_marginHorizontal="20dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="5dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textColor="@color/black"
-                    android:text="Best Score"/>
+                    android:text="@string/best_score"
+                    android:textColor="@color/black" />
+
                 <TextView
-                    android:textSize="30dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/high_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="HIGH SCORE"
-                    android:id="@+id/high_score"
-                    />
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/high_score"
+                    android:textColor="@color/black"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
 
-
     </LinearLayout>
+
     <LinearLayout
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="20dp">
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             ads:adSize="MEDIUM_RECTANGLE"
-            ads:adUnitId="@string/banner_adunit">
-        </com.google.android.gms.ads.AdView>
+            ads:adUnitId="@string/banner_adunit"></com.google.android.gms.ads.AdView>
 
     </LinearLayout>
 
@@ -81,201 +81,191 @@
         android:layout_marginBottom="10dp"
 
 
+        android:elevation="10dp"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        android:elevation="10dp">
+        app:cardCornerRadius="5dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
-                app:cardBackgroundColor="@color/basic_color"
-
-                app:cardCornerRadius="5dp"
-                android:layout_width="match_parent"
-
                 android:id="@+id/dateLayout"
-                android:visibility="visible"
+
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="20dp"
-
-
                 android:paddingHorizontal="20dp"
+                android:visibility="visible"
 
-                android:layout_height="50dp"
-                >
+
+                app:cardBackgroundColor="@color/basic_color"
+
+                app:cardCornerRadius="5dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_gravity="center_vertical"
+                    android:orientation="horizontal"
                     android:paddingHorizontal="30dp">
+
                     <TextView
-                        android:layout_gravity="center"
-                        android:textStyle="bold"
+                        android:id="@+id/session"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
                         android:layout_alignParentLeft="true"
-
-                        android:textColor="@color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:text="3/21/2023"
+                        android:textColor="@color/white"
 
-                        android:id="@+id/session"/>
+                        android:textStyle="bold" />
 
                     <TextView
-                        android:layout_alignParentRight="true"
+                        android:id="@+id/session_high_score"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2000"
-                        android:textStyle="bold"
-                        android:textSize="22dp"
-                        android:textColor="@color/white"
+                        android:layout_alignParentEnd="true"
                         android:fontFamily="@font/arizonia"
-                        android:id="@+id/session_high_score"/>
+                        android:text="2000"
+                        android:textColor="@color/white"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginVertical="5dp"
-            >
-
-
-
-            <androidx.cardview.widget.CardView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:padding="20dp"
-
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="5dp"
-
-                android:elevation="10dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:visibility="gone"
-                        android:textColor="@color/blue_gray"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="3/21/2023"
-                        android:id="@+id/title"
-
-                        android:textStyle="bold"
-                        />
-
-                    <TextView
-                        android:layout_marginTop="15dp"
-                        android:id="@+id/question"
-                        android:textColor="@color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:textSize="18dp"
-                        android:fontFamily="@font/arimo"
-                        android:text="In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying "
-                        />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-
-
-
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="5dp"
-                android:id="@+id/optionLayout"
-                android:visibility="gone"
+                android:layout_marginVertical="5dp"
                 android:orientation="vertical">
 
 
+                <androidx.cardview.widget.CardView
 
-
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:padding="20dp"
-
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="5dp"
-                android:elevation="10dp"
-                >
-                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-                    <TextView
-                        android:textColor="@color/black"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/wrong"
-                        android:text="Lorem ipsum is a placeholder text commonly used to demonstrate the"
-                        />
-                    <TextView
-                        android:textColor="@color/blue_gray"
-                        android:id="@+id/accuracy"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:elevation="10dp"
 
-                        android:text="Reason:"
+                    android:padding="20dp"
+                    app:cardBackgroundColor="@color/white"
 
-                        android:textStyle="bold"
-                        />
+                    app:cardCornerRadius="5dp">
 
-
-                    <RelativeLayout
-
-
-                        android:id="@+id/view_answers"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:background="@drawable/ic_hexnow"
-
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginRight="25dp"
-                        android:layout_marginTop="20dp"
-                        android:padding="10dp"
-                        >
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
+                            android:text="3/21/2023"
+                            android:textColor="@color/blue_gray"
+                            android:textStyle="bold"
 
-                            android:text="View Answers"
-                            android:textColor="@color/white"
-                            android:textSize="20dp"
+                            android:visibility="gone" />
+
+                        <TextView
+                            android:id="@+id/question"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/arimo"
+                            android:text="In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying "
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
-                    </RelativeLayout>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
 
+                <LinearLayout
 
+                    android:id="@+id/optionLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
 
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:elevation="10dp"
+
+                    android:padding="20dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="5dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/wrong"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Lorem ipsum is a placeholder text commonly used to demonstrate the"
+                            android:textColor="@color/black" />
+
+                        <TextView
+                            android:id="@+id/accuracy"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/reason"
+
+                            android:textColor="@color/blue_gray"
+
+                            android:textStyle="bold" />
+
+
+                        <RelativeLayout
+
+
+                            android:id="@+id/view_answers"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:layout_marginLeft="25dp"
+
+                            android:layout_marginTop="20dp"
+                            android:layout_marginRight="25dp"
+                            android:background="@drawable/ic_hexnow"
+                            android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+
+                                android:layout_centerInParent="true"
+                                android:text="@string/view_answers"
+                                android:textColor="@color/white"
+                                android:textSize="20sp"
+                                android:textStyle="bold" />
+                        </RelativeLayout>
+
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
         </LinearLayout>
-</LinearLayout>
 
 
     </androidx.cardview.widget.CardView>
-
-
 
 
 </LinearLayout>
