--- a/app/src/main/res/layout-h300dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h300dp/activity_dashboard.xml
@@ -155,13 +155,14 @@
                 android:alpha="0.05"
                 android:src="@drawable/ic_rays" />
 
-                <ImageView
-                    android:layout_width="250dp"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/game_logo" />
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:id="@+id/gameLogoImageView"
+                android:background="@drawable/game_logo"
+                android:scaleType="centerCrop" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
